--- a/groups/foote_notes.tex
+++ b/groups/foote_notes.tex
@@ -88,7 +88,7 @@ ${\overline H} = \langle {\overline a}, {\overline {a^g}} \rangle$ is not a $p$-
 \\
 5. $a$ centralizes a hyperplane of $V$.\\
 $m(A)=r=d(P)$ and $m(B)=r-1$.  $B \leq O_p(K)$ and $V \leq {\mathbb Z}(O_p(K))$.  $\langle B, V \rangle$ is abelian and
-$B+V$ is elementary abelian.  $r-1 = m(B) \leq m(B+V) \leq r$.  $A$ does not centralize $V$, so $B+V \ne B$ and thus
+$B+V$ is elementary abelian.  $r-1 = m(B) \leq m(B+V) \leq r$.  Since$A$ does not centralize $V$ but $B$ does, $B+V \ne B$ and thus
 $m(B+V)=r$.  $B \cap V$ is a hyperplane in $V$, so $a$ centralizes a hyperplane.
 \\
 \\
@@ -97,20 +97,19 @@ ${\overline H}$ centralize ${\tilde V}$.\\
 If $H$ centralizes ${\tilde V}$, all elements of order $q$ in $H$ centralize ${\tilde V}$.  Contradiction.
 \\
 \\
-7. $a$ acts non trivially on ${\tilde V}$ and ${\tilde V}$ is $2$-dimensional.\\
+7. $a$ acts non trivially on ${\tilde V}$ and ${\tilde V}$ is $2$-dimensional. 
 $a$ permutes the $p+1$ one dimensional subspaces in ${\tilde V}$ (the set of lines is denoted by ${\cal L}$).
 If $a$  acts trivially, so does $a^g$.  Let $C$ be a hyperplane: $W < C < V$.  Then $C/W$ is fixed by $a$ and $a^g$
 and quotients in the chain.  Contradiction!  So $a$ acts non-trivially on ${\cal L}$.  The orbits of the action
 have size $1$ and $p$.  Let $W < C < V$ and $C/W$ is the 1-orbit of $a$.  If $a^g$ also acts trivially $H$ acts
 trivially on successive quotients, a contradiction.  So $a^g$ must move $C/W$ 
-so $H$ acts transitively on ${\cal L}$.  $p+1 \mid |H|$, so
-$|{\tilde V}| |a| |(p+1) = p^3 (p+1)$.
+$H$ acts transitively on ${\cal L}$.
 \\
 \\
-8. Let $C$ be a hyperplane of $V$, $W \leq C \leq V$. $C/W$ is fixed by $a$ but $a^g$ moves $C/W$.  Thus $H$ acts transitively
+8. Let $C$ be a hyperplane of $V$, $W \leq C \leq V$. $C/W$ is fixed by $a$ but $a^g$ moves $C/W$.  $H$ acts transitively and
 on ${\cal L}$, $p+1 \mid |H|$, $|{\hat V} |a| (p+1) \mid p^3 (p+1)$.\\
-Let $C$ be a hyperplane: $W < C < V$.  $C/W$ is fixed by $a$ and $a^g$
-must move $C/W$ so $H$ acts transitively on ${\cal L}$.  $p+1 \mid |H|$, so
+By the above, $H$ acts transitively on lines so $p+1 \mid |H|$, and
+$|{\tilde V}| |a| |(p+1) = p^3 (p+1)$.\\
 \\
 \\
 9. If $p=2$, case (1) holds.  If $p=3$, case (2) holds.
