--- a/groups/foote_notes.tex
+++ b/groups/foote_notes.tex
@@ -124,3 +124,11 @@ abelian $2^c=p+1 \mid |{\hat N}|$. ${\hat N}$ is a 2-group. $m({\hat N}) \geq c$
 $5 \leq p= 2^c-1$, so $c \geq 3$.  But $m({\hat A}) \leq 2$ for every elementary abelian subgroup ${\hat A}$ of $PSL_2(p)$.  This contradiction
 establishes the result.
 \end{quote}
+\section{Notes}
+{\bf Thompson. maximal subgroups and uniqueness groups:}
+$P \in S_p(G)$, $t \in {\mathbb Z}(P), |t|=p$.  Let $M$ be a maximal subgroups of $G$ containing $M$, $M$, solvable.
+$O_q(M)= 1$ [Because No non-trivial $p$-central element normalizes a non-trivial $q$-subgroup of $G$.
+\\
+\\
+$C_G(t)=P$ and $M = N_G(J(P))$.  $M$ is uniquely determined by $J(P)$. $J(P_1) \thinspace P_1 \lhd P_2$.
+$J(P_1)$ allows us to "push-up" from $P_1$ to $P_2$.
