oops, rotation error

--- a/science/math4.tex
+++ b/science/math4.tex
@@ -29,8 +29,8 @@ $ ({\vec x}- {\vec {x_0}}) \times {\vec a} = 0$ and
 $ ({\vec x}- {\vec {x_1}}) \times {\vec b} = 0$ is
 ${\frac {({\vec {x_0}} - {\vec {x_1}}) \cdot ({\vec a} - {\vec b})}
 {||{\vec a} \times {\vec b}||}}$.  Rotation through $\theta$:
-$x' = x cos( \theta ) + y sin( \theta )$, 
-$y' = y cos( \theta ) - x sin( \theta )$.
+$x' = x cos( \theta ) - y sin( \theta )$, 
+$y' = y cos( \theta ) + x sin( \theta )$.
 \\
 \\
 {\bf Moebius Transformations:} 
