small fix in groups

--- a/groups/gtExtensions.tex
+++ b/groups/gtExtensions.tex
@@ -449,7 +449,7 @@ the torsion group subgroup $T(Z)$ is isomorphic to $M(G)$.
 \emph{Proof:}
 First we show every coset in $Z^2(G, {\mathbb C}^*)/B^2(G, {\mathbb C}^*)$ has a cocycle $f(\sigma, \tau)$ that
 is a $|G|$-th root of unity, $\forall \sigma, \tau$: Pick $a(\sigma, \tau) \in Z^2(G, {\mathbb C}^*)$.
-$a(\sigma, \tau \rho) a(\tau, \rho) = a(\sigma \tau, \rho) a(\sigma, \tau)$, so
+$a(\sigma, \tau \rho) a(\tau, \rho) = a(\sigma \tau, \rho) a(\sigma, \tau)^{t(\rho}$, so
 $\prod_{\rho} a(\sigma, \tau \rho) \prod_{\rho} a(\tau, \rho) = \prod_{\rho} a(\sigma \tau, \rho) a(\sigma, \tau)^{|G|}$.
 $a(\sigma, \tau)^{|G|} = {d_{\sigma \tau}}^{-1} d_{\sigma} d_{\tau}$.  So $a(\sigma, \tau)^{|G|}$ is a co-boundary.
 $\exists |G|$-th roots ${e_{\sigma}}^{|G|} = d_{\sigma}$.
