--- a/groups/gtExtensions.tex
+++ b/groups/gtExtensions.tex
@@ -435,8 +435,10 @@ is a group.
 \\
 With these definitions, $(H, Z)$ is a central extension if $Z$ is abelian and the following diagram is exact:
 $0 \rightarrow Hom(G, {\mathbb C}^*) \rightarrow  Hom(H, {\mathbb C}^*) \rightarrow  Hom(Z, {\mathbb C}^*) \rightarrow  0$.
-The set of co-cycles under the operation + is $Z^2(G, {\mathbb C}^*)$. The subset of equivalent co-cycles is denoted
-$B^2(G, {\mathbb C}^*)$.  Define $H^2(G, {\mathbb C}^*) = Z^2(G, {\mathbb C}^*)/B^2(G, {\mathbb C}^*)$.
+The set of co-cycles under the operation + is $Z^2(G, {\mathbb C}^*)$.
+Let $h: F \rightarrow H$, $h(1)= 1$. Define $f(\sigma, \tau) = h(\sigma)^{\tau} h(\tau) h(\sigma \tau)^{-1}$ then $f$ is a
+cocycle and let $\delta h= f$.  The collection of all such $\delta h$ is denoted $B^2(G, H)$.
+Define $H^2(G, {\mathbb C}^*) = Z^2(G, {\mathbb C}^*)/B^2(G, {\mathbb C}^*)$.
 $H^2(G, {\mathbb C}^*) = M(G)$ called the Schur multiplier.
 \\
 \\
