--- a/groups/gtBasic.tex
+++ b/groups/gtBasic.tex
@@ -12,6 +12,7 @@ $soc(G)= \langle M \rangle_{M \in {\cal M}}$.
 $O_{\pi}(G)=$ maximal normal $\pi-$subgroup of $G$.
 $O^{\pi}(G)=$ smallest normal subgroup of $G$ such that $G/O^{\pi}(G)$ is a $\pi$-group.
 $G$ is $p-$closed if $O_p(G) \in S_p(G)$.
+$O_{\pi , \pi'}(G) = \textnormal{preimage } O_{\pi'}(G/O_{\pi}(G))$.
 \\
 \\
 {\bf Definition 3:}
