--- a/groups/gtAutomorphism.tex
+++ b/groups/gtAutomorphism.tex
@@ -150,7 +150,7 @@ If $G$ is simple, $1 \rightarrow G \rightarrow Aut(G)$.
 \langle
 \left(\begin{array} {cc}
 i & 0\\
-0 & i\\
+0 & -i\\
 \end{array}\right),
 \left(\begin{array} {cc}
 0 & -1\\
@@ -160,7 +160,8 @@ i & 0\\
 0 & 1\\
 -1 & 0\\
 \end{array}\right)
-\rangle$. $Q_8 \in S_2(SL_2(5))$.
+\rangle$. $Q_8 \in S_2(SL_2(5))$.  Another representation: $\langle i, j, k \rangle$ where $i^2 = j^2 = k^2 = -1$, $ij = k$,
+$jk=i$, $ki=j$.
 \\
 \\
 {\bf Theorem 4:}  The automorphism group of $Q_8$ is $S_4$.
