--- a/science/physics.tex
+++ b/science/physics.tex
@@ -1165,9 +1165,9 @@ coordinates:}
 $\delta W= \sum_{\alpha} \Phi_{\alpha} \delta q_{\alpha}$,
 $\Phi_{\alpha} =
 \sum \vec{f} \cdot {\frac {\partial r} {\partial q_{\alpha}}}$.  
-\emph{Lagrange equations:} $({\frac d {dt}})
-{\frac {\partial T} {\partial {\dot {q}}_{\alpha}}}-
-{\frac {\partial T} {\partial q_{\alpha}}}= \Phi_{\alpha}$.  
+\emph{Lagrange equations:} $L= T - V$, $({\frac d {dt}})
+{\frac {\partial L} {\partial {\dot {q}}_{\alpha}}}-
+{\frac {\partial L} {\partial q_{\alpha}}}= \Phi_{\alpha}$.  
 If the forces are all conservative and $L=T-V$ then
 $({\frac d {dt}})
 {\frac {\partial L} {\partial {\dot {q}}_{\alpha}}}-
