include Lorentx derivation

--- a/science/physics.tex
+++ b/science/physics.tex
@@ -33,6 +33,12 @@ is invariant under the Lorentz transform.
 $E^{2} - (p c)^{2} = { (m_0 c^{2} ) }^{2}$.
 \\
 \\
+\begin{figure} 
+\center
+\includegraphics[width=0.7\textwidth,natwidth=642,natheight=610, height=70mm, width=85mm]{Lorentz.pdf}
+\end{figure}
+\\
+\\
 {\bf Maxwell's Equations (MKS):}
 $\nabla \cdot {\vec j} = - {\frac {\partial \rho} {\partial t}}$,
 $\nabla \cdot {\vec E} = {\frac {\rho} {\epsilon_{0}}}$,
