--- a/groups/gtBasic.tex
+++ b/groups/gtBasic.tex
@@ -46,7 +46,7 @@ control fusion in $S$ if for $s \in S$, $s^G \cap S = s^H$.
 Let $X \le H \le G$.  $X$ is \emph{weakly closed} in $H$ with respect to $G$ if
 $X^g \cap H = \{X\}$.\\
 \\
-{\bf Definition 7:}
+{\bf Definition 7:} $O_{\pi', \pi}(G) = \textnormal{ pre-image } O_{\pi}(G/O_{\pi'}(g))$.
 $G$ is $p$\emph{-constrained} if
 $P \in S_p ( O_{p',p} (G))$ implies $C_G(P) \subseteq O_{p',p} (G)$.
 Equivalently, if $O_{p'}(G)=1$ then $C_G(O_p(G)) \subseteq O_p(G)$ and $F(G)= O_p(G)$..
