--- a/groups/gtSolvable.tex
+++ b/groups/gtSolvable.tex
@@ -136,6 +136,11 @@ $\theta(k^n)= \theta(n^{-1}k)^n \theta(n) = \theta(n^{-1}k) m =
 \theta(n^{-1})^k \theta(k) m = (m^k)^{-1} \theta(k) m = 1$ and we're done.
 \end{quote}
 \section {Philip Hall's Theorem} 
+{\bf Definition:} Let $\pi$ be a set of primes. A $\pi$ group is one whose order is not divisible by any prime $p \notin \pi$.
+A Hall $\pi$ subgroup, $H$, of a group, $G$, is a subgroup $H<G$ where $H$ is a $\pi$ group and ${\frac {|G|} {|H|}}$ is not divisible by any
+prime in $\pi$.  It is a $\pi$-subgroup of $GG$ of maximal order.
+\\
+\\
 {\bf Hall's Theorem:} 
 Let $G$ be a solvable group and $\pi$ a set of primes then (i) $G$ has a $\pi$-Hall
 subgroup, (ii) $G$ acts transitively on its Hall $\pi$-subgroups via conjugation, 
