--- a/groups/gtPermutations.tex
+++ b/groups/gtPermutations.tex
@@ -38,6 +38,11 @@ $\Gamma$ is $G$ invariant if $\Gamma^G= \Gamma$ so $\Gamma$ is a union of $G$ or
 $G/G_{\Gamma} \equiv G^{\Gamma}$.
 \\
 \\
+{\bf Definition 4:} A transitive group,
+$G$, acts \emph{regularly} on $\Omega$ if $\forall \alpha, \beta \in \Omega,
+\exists ! g: \alpha^g= \beta$.  Equivalently, $|G_a|=1, \forall a \in \Omega$.
+\\
+\\
 {\bf Normal Subgroups of Primitive Groups Theorem:}  
 Let $G$ be primitive on $\Omega$ and $1 \ne N \lhd G$.  Then either $N \subseteq G_a$ or
 $N$ acts transitively on $\Omega$.  If the action is regular, $N$ is a minimal normal subgroup.
@@ -88,11 +93,6 @@ $ \langle g, G_a \rangle > G_a$
 stabilises the block containing $a$.  So if $G_a$ is not primitive then $G_a$ is not maximal.
 If $G > M > G_a$ and $M$ is maximal, $Ma$ is a set of imprimitivity so $G$ is not primitive.
 \end{quote}
-{\bf Definition 4:}
-$G$ acts \emph{regularly} on $\Omega$ if $\forall \alpha, \beta \in \Omega,
-\exists ! g: \alpha^g= \beta$.  
-\\
-\\
 {\bf Theorem 4:}  Let $G$ be $n-$fold transitive on $\Omega$, $n \ge 2$ and $N$ a regular
 normal subgroup of $G$ then $n \le 4$ and 
 (1) If $n=2$, $N$ is an elementary abelian $p-$group; 
