--- a/groups/gtSE.tex
+++ b/groups/gtSE.tex
@@ -1,6 +1,6 @@
 \chapter{Note on Strongly Embedded subgoups}
 \section {Main result} 
-{\bf Definition:} $H<G$ is strongly embedded if (a) $H$  is a roper subgroup of $G$ of even order and
+{\bf Definition:} $H<G$ is strongly embedded if (a) $H$  is a proper subgroup of $G$ of even order and
 (2) $\forall x \in G \setminus H$, $|H \cap H^x|$ is odd.
 \\
 \\
