--- a/groups/gtSpecific.tex
+++ b/groups/gtSpecific.tex
@@ -452,7 +452,7 @@ If $dim(V)=n$, any orthogonal transformation is a product of $ \le n$ symmetries
 Case 1: $V_1=Fix( \eta)$ is not totally isotropic.
 \\
 $\exists u: Q(u) \ne 0$ and $\eta$ stabilizes $F u^{\perp}$, so by induction,
-$\eta_{F u^{\perp}})$ is a product of $n-1$ symmetries.
+$\eta_{F u^{\perp}}$ is a product of $n-1$ symmetries.
 \\
 \\
 Case 2: $\exists u \in V: Q(u) \ne 0$ and $Q(u- \eta(u)) \ne 0$.
