--- a/groups/foote_notes.tex
+++ b/groups/foote_notes.tex
@@ -127,7 +127,7 @@ establishes the result.
 \section{Notes}
 {\bf Thompson. maximal subgroups and uniqueness groups:}
 $P \in S_p(G)$, $t \in {\mathbb Z}(P), |t|=p$.  Let $M$ be a maximal subgroups of $G$ containing $M$, $M$, solvable.
-$O_q(M)= 1$ [Because No non-trivial $p$-central element normalizes a non-trivial $q$-subgroup of $G$.
+$O_q(M)= 1$ [Because No non-trivial $p$-central element normalizes a non-trivial $q$-subgroup of $G$].
 \\
 \\
 $C_G(t)=P$ and $M = N_G(J(P))$.  $M$ is uniquely determined by $J(P)$. $J(P_1) \thinspace P_1 \lhd P_2$.
