Another small fix

--- a/groups/gtConstruct.tex
+++ b/groups/gtConstruct.tex
@@ -38,7 +38,7 @@ $x h^{-1} \in N$ and $x= nh$.
 \\
 \\
 $3 \rightarrow 1$:
-If $G= N \ltimes H$, the map $\varphi_{|H}$ is an isomorphism onto $Q$ and $H$ satisfies the
+If $G= H \ltimes N$, the map $\varphi_{|H}$ is an isomorphism onto $Q$ and $H$ satisfies the
 conditions of (1).
 \end{quote}
 \section {Presentations}
