--- a/groups/gtConstruct.tex
+++ b/groups/gtConstruct.tex
@@ -100,7 +100,7 @@ define $\gamma: D \rightarrow D$ by $(x_1, x_2 , \ldots , x_n) \mapsto (x_1, \ga
 \end{quote}
 {\bf Example:}
 Both $D_8$ and
-$Q_8$ are central products of $Z_2$ by $Z_2 \times Z_2$.  Note that $D_8$ is also a direct product but $Q_8$
+$Q_8$ are central products of $Z_2$ by $Z_2 \times Z_2$.  Note that $D_8$ is also a semi-direct product but $Q_8$
 is not.
 \\
 \\
