--- a/groups/gtConstruct.tex
+++ b/groups/gtConstruct.tex
@@ -106,7 +106,7 @@ is not.
 \\
 {\bf Theorem 6:}
 Let $G_i, 1 \le i \le n$ be a family of groups with $Z(G_1)=Z(G_i)$ and
-$Aut_{G_i}(Z(G_i))=Aut(Z(G_i))$.  The up to isomorphism there is a unique
+$Aut_{G_i}(Z(G_i))=Aut(Z(G_i))$.  Then, up to isomorphism, there is a unique
 central product with $Z(G_1)=Z(G_i)$.
 \begin{quote}
 \emph{Proof:}
