--- a/groups/gtConstruct.tex
+++ b/groups/gtConstruct.tex
@@ -98,10 +98,19 @@ $\delta_i= \beta_i (\alpha_i)^{-1}$ then $\gamma_{i|{\mathbb Z}(D_i)}= \delta_i$
 define $\gamma: D \rightarrow D$ by $(x_1, x_2 , \ldots , x_n) \mapsto (x_1, \gamma_1(x_2), \ldots,
 \gamma_n(x_n))$.
 \end{quote}
+{\bf Construction:} Consider $H,K$ with $Z_1 \subseteq {\mathbb Z}(H)$ and $Z_2 \subseteq {\mathbb Z}(K)$.  Let
+$\theta: Z_1 \rightarrow Z_2$ be an isomorphism.  The central product (with $Z_1$ identified with $Z_2$) is $(H \times K) / X$,
+where $X = \{(z, \theta^{-1}(z)), z \in Z_1 \}$.
+\\
+\\
 {\bf Example:}
-Both $D_8$ and
-$Q_8$ are central products of $Z_2$ by $Z_2 \times Z_2$.  Note that $D_8$ is also a semi-direct product but $Q_8$
-is not.
+Let $D_1 \sim D_8= \{\rho_1, \tau_1 \}$, ${\rho_1}^4 = {\tau_1}^2 = 1$ and
+$D_2 \sim D_8= \{\rho_2, \tau_2 \}$, ${\rho_2}^4 = {\tau_2}^2 = 1$.  Consider the
+central product $G= D_1 * D_2$ with
+$Z_1 = \langle {\rho_1}^2 \rangle$ and $Z_2 = \langle {\rho_2}^2 \rangle$. Now, in $G$,
+put $Q_1 = \langle \rho_1, \tau_1 \rho_2 \rangle$ and
+$Q_2 = \langle \rho_1 \tau_2, \rho_2 \rangle$.  $Q_1$ and $Q_2$ are both quaternion and
+$G=D_1*D_2=Q_1*Q_2$.
 \\
 \\
 {\bf Theorem 6:}
