--- a/groups/gtExtensions.tex
+++ b/groups/gtExtensions.tex
@@ -26,7 +26,7 @@ defines a group $G$ which is an extension of $N$ by $H$.
 $1 \rightarrow N \rightarrow G \rightarrow H \rightarrow 1$ holds with the obvious
 embedding $n \mapsto (n,1)$ and $h \mapsto (1,h)$.
 \begin{quote}
-\emph{Proof:}  Put $(n,h)^{-1}= \theta^{-1}[n^{-1} f(h,h^{-1})^{-1}], h^{-1})$.
+\emph{Proof:}  Put $(n,h)^{-1}= (\theta^{-1}[n^{-1} f(h,h^{-1})^{-1}], h^{-1})$.
 $(n,h)^{-1} \cdot (n,h)= (1,1)$.   $(n,h) \cdot (1,1)= (n,h)$.  Associativity is a long
 calculation but works.
 \end{quote}
