--- a/science/physics.tex
+++ b/science/physics.tex
@@ -1476,7 +1476,7 @@ $a^+ \mid n\rangle = (n+1) \mid n \rangle$, $[a^+, a^-]=1$, $H = \omega \hbar (a
 $\langle p \mid x \rangle = {\frac 1 {\sqrt {2 \pi}}} exp(-i{\frac {p \cdot x} {\hbar}})$.
 $v = {\frac { d \langle \psi \mid X \mid \psi \rangle} {dt}} = {\frac i {2m \hbar}} [P^2, X]$.
 $[P^2, X] = P[P,X] + [P, X]P$.
-$[P, X] = i \hbar$. ${\frac {d \langle P \rangle}  {dt}}= {\frac i {2m \hbar}} \langle [P^2, P] \rangle
+$[P, X] = -i \hbar$. ${\frac {d \langle P \rangle}  {dt}}= {\frac i {2m \hbar}} \langle [P^2, P] \rangle
 + {\frac i {\hbar}}\langle [V, P] \rangle= - \langle  \nabla V \rangle$. $p = {\frac {\partial L}
 {\partial {\dot x}}}$ and $H= p {\dot x} - L$, just like the classical case.
 \\
