--- a/science/physics.tex
+++ b/science/physics.tex
@@ -48,7 +48,7 @@ ${c^{2}} \nabla \times {\vec B} = {\frac {j} {\epsilon_{0}}} +
 {\frac {\partial {\vec E}} {\partial t}}$, $c= {\frac 1 {\sqrt { \mu_0 \epsilon_0}}}$.
 $S= \epsilon_0 c^2 E \times B$.
 \\
-In \emph{non-dispersive media}, ${\vec D} = \epsilon {\vec B} $ and ${\vec H} = \mu {\vec B}$.
+In \emph{non-dispersive media}, ${\vec D} = \epsilon {\vec B} $ and ${\vec B} = \mu {\vec H}$.
 \\
 \\
 {\bf Maxwell solution outline:} 
