--- a/science/math4.tex
+++ b/science/math4.tex
@@ -28,7 +28,10 @@ w_1 & w_2 & w_3 \\
 $ ({\vec x}- {\vec {x_0}}) \times {\vec a} = 0$ and
 $ ({\vec x}- {\vec {x_1}}) \times {\vec b} = 0$ is
 ${\frac {({\vec {x_0}} - {\vec {x_1}}) \cdot ({\vec a} - {\vec b})}
-{||{\vec a} \times {\vec b}||}}$.  Rotation through $\theta$:
+{||{\vec a} \times {\vec b}||}}$.
+\\
+\\
+{\bf Rotation through $\theta$:}
 $x' = x cos( \theta ) - y sin( \theta )$, 
 $y' = y cos( \theta ) + x sin( \theta )$.
 \\
