--- a/science/math4.tex
+++ b/science/math4.tex
@@ -1,5 +1,6 @@
 \section{Analysis, Geometry and Topology}
 \subsection{Geometry and Topology}
+{\bf Distance and volume in three dimensions:}
 $[{\vec a}, {\vec b}, {\vec c}]= {\vec a} \cdot ({\vec b} \times {\vec c})$.
 Plane $\Pi$, perpendicular to unit vector ${\vec n}$ and containing ${\vec a}$:
 ${\vec x} \cdot {\vec n}= {\vec a} \cdot {\vec n} = d$.  Distance from ${\vec y}$ to $\Pi$ is
@@ -31,9 +32,9 @@ ${\frac {({\vec {x_0}} - {\vec {x_1}}) \cdot ({\vec a} - {\vec b})}
 {||{\vec a} \times {\vec b}||}}$.
 \\
 \\
-{\bf Rotation through $\theta$:}
-$x' = x cos( \theta ) - y sin( \theta )$, 
-$y' = y cos( \theta ) + x sin( \theta )$.
+{\bf Rotation of coordinates through $\theta$:}
+$x' = x cos( \theta ) + y sin( \theta )$, 
+$y' = y cos( \theta ) - x sin( \theta )$.
 \\
 \\
 {\bf Moebius Transformations:} 
