--- a/science/math4.tex
+++ b/science/math4.tex
@@ -533,7 +533,7 @@ $R_{m_2} R_{m_1} =
 {\frac {(m_1 m_2 +1)^2 - (m_1 - m_2)^2} {(1+{m_1}^2) (1+{m_2}^2)}} \\
 \end{array}
 \right)$.  A reflection in the line with slope ${\theta_1}$ followed by one of slope ${\theta_2}$ is
-equivalent to a rotation in $2(\theta_1 - theta_2)$.
+equivalent to a rotation in $2(\theta_1 - \theta_2)$.
 \subsection {Real Analysis and Manifolds}
 {\bf Definition:} A metric space, $R$, is a vector space with a distance
 $d: R \times R \rightarrow {\mathbb R}^{\ge 0}$,
